# sem1

./: CMakeLists.txt  hw2ex1.cpp  hw2ex2.cpp  hw3.cpp  main.cpp  sem2.cpp  test.cpp  test2.cpp  вопросы.txt  вопросы3.txt
