cmake_minimum_required(VERSION 3.20)
project(sem1v2)

set(CMAKE_CXX_STANDARD 20)

add_executable(sem1v2 main.cpp)

add_executable(sem2v2 sem2.cpp)
add_executable(hw2ex1 hw2ex1.cpp)
add_executable(test test.cpp)
add_executable(test2 test2.cpp)
add_executable(hw2ex2 hw2ex2.cpp)
add_executable(hw3 hw3.cpp)